--- a/src/tasks/tasks.style.css
+++ b/src/tasks/tasks.style.css
@@ -6,10 +6,18 @@
   margin: 10px 0 10px 0;
 }
 
+.task-completed {
+  text-decoration: line-through;
+}
+
 .subtask {
   font-weight: 500;
   align-items: center;
   display: block;
   justify-content: center;
   margin: 5px 0 5px 0;
+}
+
+.subtask-completed {
+  text-decoration: line-through;
 }
