--- a/src/tasks/tasks.style.css
+++ b/src/tasks/tasks.style.css
@@ -1,17 +1,11 @@
-.root {
-  display: block;
-  justify-content: space-between;
-  position: relative;
-  align-items: center;
-  height: 400px;
-  width: 400px;
+.centered {
+  margin: auto;
+  width: 40%;
+  padding: 10px;
 }
-
 .tasks {
   font-weight: bold;
   display: block;
-  justify-content: space-between;
-  align-items: center;
   margin: 10px 0 10px 0;
 }
 
@@ -21,9 +15,8 @@
 }
 
 .subtask {
-  font-weight: 500;
   display: block;
-  justify-content: space-between;
+  font-weight: 600px;
   margin: 10px 0 10px 0;
 }
 
