--- a/src/tasks/tasks.style.css
+++ b/src/tasks/tasks.style.css
@@ -1,6 +1,14 @@
+body {
+  background-color: bisque;
+}
+span {
+  display: grid;
+  row-gap: 50px;
+  grid-template-columns: auto auto auto;
+}
 .centered {
   margin: auto;
-  width: 60%;
+  width: 70%;
   padding: 10px;
 }
 .tasks {
@@ -27,7 +35,7 @@
 }
 
 .input-field {
-  width: 100px;
+  width: 200px;
   opacity: 100%;
 }
 
@@ -36,5 +44,4 @@
   color: black;
   font-size: 19px;
   cursor: pointer;
-  background-color: #fff;
 }
